@@ -50,10 +50,13 @@ import co.kirikiri.service.dto.roadmap.RoadmapGoalRoomsFilterTypeDto;
 import co.kirikiri.service.dto.roadmap.request.RoadmapFilterTypeRequest;
 import co.kirikiri.service.dto.roadmap.request.RoadmapSearchRequest;
 import co.kirikiri.service.dto.roadmap.response.MemberRoadmapResponse;
+import co.kirikiri.service.dto.roadmap.response.MemberRoadmapResponses;
 import co.kirikiri.service.dto.roadmap.response.RoadmapCategoryResponse;
 import co.kirikiri.service.dto.roadmap.response.RoadmapContentResponse;
 import co.kirikiri.service.dto.roadmap.response.RoadmapForListResponse;
+import co.kirikiri.service.dto.roadmap.response.RoadmapForListResponses;
 import co.kirikiri.service.dto.roadmap.response.RoadmapGoalRoomResponse;
+import co.kirikiri.service.dto.roadmap.response.RoadmapGoalRoomResponses;
 import co.kirikiri.service.dto.roadmap.response.RoadmapNodeResponse;
 import co.kirikiri.service.dto.roadmap.response.RoadmapResponse;
 import co.kirikiri.service.dto.roadmap.response.RoadmapReviewResponse;
@@ -127,10 +130,9 @@ class RoadmapReadServiceTest {
         final RoadmapResponse expectedResponse = new RoadmapResponse(
                 roadmapId, new RoadmapCategoryResponse(1L, "운동"), "로드맵 제목", "로드맵 소개글",
                 new MemberResponse(1L, "닉네임", "default-member-image"),
-                new RoadmapContentResponse(1L, "로드맵 본문",
-                        List.of(
-                                new RoadmapNodeResponse(1L, "로드맵 노드1 제목", "로드맵 노드1 설명", Collections.emptyList())
-                        )), "DIFFICULT", 30, now,
+                new RoadmapContentResponse(1L, "로드맵 본문", List.of(
+                        new RoadmapNodeResponse(1L, "로드맵 노드1 제목", "로드맵 노드1 설명", Collections.emptyList())
+                )), "DIFFICULT", 30, now,
                 List.of(new RoadmapTagResponse(1L, "태그1"),
                         new RoadmapTagResponse(2L, "태그2")),
                 2L, 2L, 2L
@@ -186,25 +188,71 @@ class RoadmapReadServiceTest {
         final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, null, null, null, 10);
 
         // when
-        final List<RoadmapForListResponse> roadmapResponses = roadmapService.findRoadmapsByFilterType(
+        final RoadmapForListResponses roadmapResponses = roadmapService.findRoadmapsByFilterType(
                 categoryId, filterType, scrollRequest);
 
         // then
         final RoadmapForListResponse firstRoadmapResponse = new RoadmapForListResponse(1L, "첫 번째 로드맵", "로드맵 소개글",
-                "DIFFICULT", 30, LocalDateTime.now(), new MemberResponse(1L, "닉네임", "default-member-image"),
+                "DIFFICULT", 30, LocalDateTime.now(),
+                new MemberResponse(1L, "닉네임", "default-member-image"),
                 new RoadmapCategoryResponse(1, "여행"),
-                List.of(new RoadmapTagResponse(1L, "태그1"), new RoadmapTagResponse(2L, "태그2")));
+                List.of(
+                        new RoadmapTagResponse(1L, "태그1"),
+                        new RoadmapTagResponse(2L, "태그2")));
 
         final RoadmapForListResponse secondRoadmapResponse = new RoadmapForListResponse(1L, "두 번째 로드맵", "로드맵 소개글",
-                "DIFFICULT", 30, LocalDateTime.now(), new MemberResponse(1L, "닉네임", "default-member-image"),
+                "DIFFICULT", 30, LocalDateTime.now(),
+                new MemberResponse(1L, "닉네임", "default-member-image"),
                 new RoadmapCategoryResponse(1, "여행"),
-                List.of(new RoadmapTagResponse(1L, "태그1"), new RoadmapTagResponse(2L, "태그2")));
+                List.of(
+                        new RoadmapTagResponse(1L, "태그1"),
+                        new RoadmapTagResponse(2L, "태그2")));
 
-        final List<RoadmapForListResponse> expected = List.of(firstRoadmapResponse, secondRoadmapResponse);
+        final List<RoadmapForListResponse> responses = List.of(firstRoadmapResponse, secondRoadmapResponse);
+        final RoadmapForListResponses expected = new RoadmapForListResponses(responses, false);
 
         assertThat(roadmapResponses)
                 .usingRecursiveComparison()
-                .ignoringFields("createdAt")
+                .ignoringFields("responses.createdAt")
+                .isEqualTo(expected);
+    }
+
+    @Test
+    void 로드맵_목록_조회시_다음_요소가_존재하면_true로_반환한다() {
+        // given
+        final RoadmapCategory category = new RoadmapCategory(1L, "여행");
+        final List<Roadmap> roadmaps = List.of(
+                로드맵을_생성한다("첫 번째 로드맵", category),
+                로드맵을_생성한다("두 번째 로드맵", category));
+
+        when(roadmapCategoryRepository.findById(any()))
+                .thenReturn(Optional.of(category));
+        when(roadmapRepository.findRoadmapsByCategory(any(), any(), any(), anyInt()))
+                .thenReturn(roadmaps);
+
+        final Long categoryId = 1L;
+        final RoadmapFilterTypeRequest filterType = null;
+        final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, null, null, null, 1);
+
+        // when
+        final RoadmapForListResponses roadmapResponses = roadmapService.findRoadmapsByFilterType(
+                categoryId, filterType, scrollRequest);
+
+        // then
+        final RoadmapForListResponse firstRoadmapResponse = new RoadmapForListResponse(
+                1L, "첫 번째 로드맵", "로드맵 소개글", "DIFFICULT", 30, LocalDateTime.now(),
+                new MemberResponse(1L, "닉네임", "default-member-image"),
+                new RoadmapCategoryResponse(1, "여행"),
+                List.of(
+                        new RoadmapTagResponse(1L, "태그1"),
+                        new RoadmapTagResponse(2L, "태그2")));
+
+        final List<RoadmapForListResponse> responses = List.of(firstRoadmapResponse);
+        final RoadmapForListResponses expected = new RoadmapForListResponses(responses, true);
+
+        assertThat(roadmapResponses)
+                .usingRecursiveComparison()
+                .ignoringFields("responses.createdAt")
                 .isEqualTo(expected);
     }
 
@@ -222,25 +270,32 @@ class RoadmapReadServiceTest {
         final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, null, null, null, 10);
 
         // when
-        final List<RoadmapForListResponse> roadmapResponses = roadmapService.findRoadmapsByFilterType(
+        final RoadmapForListResponses roadmapResponses = roadmapService.findRoadmapsByFilterType(
                 categoryId, filterType, scrollRequest);
 
         // then
         final RoadmapForListResponse firstRoadmapResponse = new RoadmapForListResponse(1L, "첫 번째 로드맵", "로드맵 소개글",
-                "DIFFICULT", 30, LocalDateTime.now(), new MemberResponse(1L, "닉네임", "default-member-image"),
+                "DIFFICULT", 30, LocalDateTime.now(),
+                new MemberResponse(1L, "닉네임", "default-member-image"),
                 new RoadmapCategoryResponse(1, "여행"),
-                List.of(new RoadmapTagResponse(1L, "태그1"), new RoadmapTagResponse(2L, "태그2")));
+                List.of(
+                        new RoadmapTagResponse(1L, "태그1"),
+                        new RoadmapTagResponse(2L, "태그2")));
 
         final RoadmapForListResponse secondRoadmapResponse = new RoadmapForListResponse(1L, "두 번째 로드맵", "로드맵 소개글",
-                "DIFFICULT", 30, LocalDateTime.now(), new MemberResponse(1L, "닉네임", "default-member-image"),
+                "DIFFICULT", 30, LocalDateTime.now(),
+                new MemberResponse(1L, "닉네임", "default-member-image"),
                 new RoadmapCategoryResponse(1, "여행"),
-                List.of(new RoadmapTagResponse(1L, "태그1"), new RoadmapTagResponse(2L, "태그2")));
+                List.of(
+                        new RoadmapTagResponse(1L, "태그1"),
+                        new RoadmapTagResponse(2L, "태그2")));
 
-        final List<RoadmapForListResponse> expected = List.of(firstRoadmapResponse, secondRoadmapResponse);
+        final RoadmapForListResponses expected = new RoadmapForListResponses(
+                List.of(firstRoadmapResponse, secondRoadmapResponse), false);
 
         assertThat(roadmapResponses)
                 .usingRecursiveComparison()
-                .ignoringFields("createdAt")
+                .ignoringFields("responses.createdAt")
                 .isEqualTo(expected);
     }
 
@@ -260,20 +315,23 @@ class RoadmapReadServiceTest {
         final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, null, null, null, 10);
 
         // when
-        final List<RoadmapForListResponse> roadmapResponses = roadmapService.findRoadmapsByFilterType(
+        final RoadmapForListResponses roadmapResponses = roadmapService.findRoadmapsByFilterType(
                 categoryId, filterType, scrollRequest);
 
         // then
         final RoadmapForListResponse roadmapResponse = new RoadmapForListResponse(1L, "첫 번째 로드맵", "로드맵 소개글",
-                "DIFFICULT", 30, LocalDateTime.now(), new MemberResponse(1L, "닉네임", "default-member-image"),
+                "DIFFICULT", 30, LocalDateTime.now(),
+                new MemberResponse(1L, "닉네임", "default-member-image"),
                 new RoadmapCategoryResponse(1, "여행"),
-                List.of(new RoadmapTagResponse(1L, "태그1"), new RoadmapTagResponse(2L, "태그2")));
+                List.of(
+                        new RoadmapTagResponse(1L, "태그1"),
+                        new RoadmapTagResponse(2L, "태그2")));
 
-        final List<RoadmapForListResponse> expected = List.of(roadmapResponse);
+        final RoadmapForListResponses expected = new RoadmapForListResponses(List.of(roadmapResponse), false);
 
         assertThat(roadmapResponses)
                 .usingRecursiveComparison()
-                .ignoringFields("createdAt")
+                .ignoringFields("responses.createdAt")
                 .isEqualTo(expected);
     }
 
@@ -309,25 +367,32 @@ class RoadmapReadServiceTest {
         final CustomScrollRequest scrollRequest = new CustomScrollRequest(null, null, null, null, 10);
 
         // when
-        final List<RoadmapForListResponse> roadmapResponses = roadmapService.search(
+        final RoadmapForListResponses roadmapResponses = roadmapService.search(
                 filterType, roadmapSearchRequest, scrollRequest);
 
         // then
         final RoadmapForListResponse firstRoadmapResponse = new RoadmapForListResponse(1L, "첫 번째 로드맵", "로드맵 소개글",
-                "DIFFICULT", 30, LocalDateTime.now(), new MemberResponse(1L, "닉네임", "default-member-image"),
+                "DIFFICULT", 30, LocalDateTime.now(),
+                new MemberResponse(1L, "닉네임", "default-member-image"),
                 new RoadmapCategoryResponse(1, "여행"),
-                List.of(new RoadmapTagResponse(1L, "태그1"), new RoadmapTagResponse(2L, "태그2")));
+                List.of(
+                        new RoadmapTagResponse(1L, "태그1"),
+                        new RoadmapTagResponse(2L, "태그2")));
 
         final RoadmapForListResponse secondRoadmapResponse = new RoadmapForListResponse(1L, "두 번째 로드맵", "로드맵 소개글",
-                "DIFFICULT", 30, LocalDateTime.now(), new MemberResponse(1L, "닉네임", "default-member-image"),
+                "DIFFICULT", 30, LocalDateTime.now(),
+                new MemberResponse(1L, "닉네임", "default-member-image"),
                 new RoadmapCategoryResponse(1, "여행"),
-                List.of(new RoadmapTagResponse(1L, "태그1"), new RoadmapTagResponse(2L, "태그2")));
+                List.of(
+                        new RoadmapTagResponse(1L, "태그1"),
+                        new RoadmapTagResponse(2L, "태그2")));
 
-        final List<RoadmapForListResponse> expected = List.of(firstRoadmapResponse, secondRoadmapResponse);
+        final RoadmapForListResponses expected = new RoadmapForListResponses(
+                List.of(firstRoadmapResponse, secondRoadmapResponse), false);
 
         assertThat(roadmapResponses)
                 .usingRecursiveComparison()
-                .ignoringFields("createdAt")
+                .ignoringFields("responses.createdAt")
                 .isEqualTo(expected);
     }
 
@@ -346,19 +411,19 @@ class RoadmapReadServiceTest {
                 .thenReturn(List.of(roadmap2, roadmap1));
 
         // when
-        final List<MemberRoadmapResponse> memberRoadmapResponse = roadmapService.findAllMemberRoadmaps("identifier1",
-                new CustomScrollRequest(null, null, null, null, 10));
+        final MemberRoadmapResponses memberRoadmapResponse = roadmapService.findAllMemberRoadmaps(
+                "identifier1", new CustomScrollRequest(null, null, null, null, 10));
 
         // then
-        final List<MemberRoadmapResponse> expected = List.of(
-                new MemberRoadmapResponse(2L, "로드맵2", RoadmapDifficulty.DIFFICULT.name(),
-                        LocalDateTime.now(), new RoadmapCategoryResponse(2L, "여가")),
-                new MemberRoadmapResponse(1L, "로드맵1", RoadmapDifficulty.DIFFICULT.name(),
-                        LocalDateTime.now(), new RoadmapCategoryResponse(1L, "운동")));
+        final MemberRoadmapResponses expected = new MemberRoadmapResponses(List.of(
+                new MemberRoadmapResponse(2L, "로드맵2", RoadmapDifficulty.DIFFICULT.name(), LocalDateTime.now(),
+                        new RoadmapCategoryResponse(2L, "여가")),
+                new MemberRoadmapResponse(1L, "로드맵1", RoadmapDifficulty.DIFFICULT.name(), LocalDateTime.now(),
+                        new RoadmapCategoryResponse(1L, "운동"))), false);
 
         assertThat(memberRoadmapResponse)
                 .usingRecursiveComparison()
-                .ignoringFields("roadmapId", "createdAt")
+                .ignoringFields("responses.roadmapId", "responses.createdAt")
                 .isEqualTo(expected);
     }
 
@@ -417,20 +482,23 @@ class RoadmapReadServiceTest {
                 .willReturn(goalRooms);
 
         // when
-        final List<RoadmapGoalRoomResponse> result = roadmapService.findRoadmapGoalRoomsByFilterType(1L,
+        final RoadmapGoalRoomResponses result = roadmapService.findRoadmapGoalRoomsByFilterType(1L,
                 RoadmapGoalRoomsFilterTypeDto.LATEST, new CustomScrollRequest(null, null, null, null, 10));
 
-        final List<RoadmapGoalRoomResponse> expected = List.of(
-                new RoadmapGoalRoomResponse(2L, "goalroom2", 1, 10, LocalDateTime.now(), TODAY, TODAY.plusDays(20),
-                        new MemberResponse(member3.getId(), member3.getNickname().getValue(),
-                                member3.getImage().getServerFilePath())),
-                new RoadmapGoalRoomResponse(1L, "goalroom1", 1, 10, LocalDateTime.now(), TODAY, TODAY.plusDays(20),
-                        new MemberResponse(member2.getId(), member2.getNickname().getValue(),
-                                member2.getImage().getServerFilePath())));
+        final RoadmapGoalRoomResponses expected =
+                new RoadmapGoalRoomResponses(List.of(
+                        new RoadmapGoalRoomResponse(2L, "goalroom2", 1, 10, LocalDateTime.now(),
+                                TODAY, TODAY.plusDays(20),
+                                new MemberResponse(member3.getId(), member3.getNickname().getValue(),
+                                        member3.getImage().getServerFilePath())),
+                        new RoadmapGoalRoomResponse(1L, "goalroom1", 1, 10, LocalDateTime.now(),
+                                TODAY, TODAY.plusDays(20),
+                                new MemberResponse(member2.getId(), member2.getNickname().getValue(),
+                                        member2.getImage().getServerFilePath()))), false);
 
         assertThat(result)
                 .usingRecursiveComparison()
-                .ignoringFields("createdAt")
+                .ignoringFields("responses.createdAt")
                 .isEqualTo(expected);
     }
 
@@ -443,8 +511,8 @@ class RoadmapReadServiceTest {
         // when
         // then
         assertThatThrownBy(
-                () -> roadmapService.findRoadmapGoalRoomsByFilterType(1L, RoadmapGoalRoomsFilterTypeDto.LATEST,
-                        new CustomScrollRequest(null, null, null, null, 10)))
+                () -> roadmapService.findRoadmapGoalRoomsByFilterType(1L,
+                        RoadmapGoalRoomsFilterTypeDto.LATEST, new CustomScrollRequest(null, null, null, null, 10)))
                 .isInstanceOf(NotFoundException.class)
                 .hasMessageContaining("존재하지 않는 로드맵입니다. roadmapId = 1");
     }
